--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/7.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/7.md
@@ -28,6 +28,12 @@ Cho sơ đồ mạng được thiết kế như sau:
 
 ### Tạo thư mục và các file
 
+Tạo các thư mục theo mô hình như sau:
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/13-13-52-10-Screenshot%20from%202021-11-13%2013-50-18.png">
+
+Bằng các dòng lệnh dưới đây :
+
 ```sh
 mkdir ~/Desktop/OnTap
 cd ~/Desktop/OnTap
@@ -38,34 +44,20 @@ touch router0.startup router1.startup router2.startup router3.startup router4.st
 
 ### Thiết lập các file
 
-Chúng ta sẽ vẽ lại mô hình sơ đồ như sau :
+#### Mô hình lại bài toán
+
+::: warning ⚠️ LƯU Ý
+
+Vì mô hình trên đề bài không có các nhánh mạng nên ta phải tự mô hình cá nhân như sau:
 
 <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/12-22-24-34-06-16-21-34-Screen%20Shot%202021-11-06%20at%2016.21.27.png">
 
-<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/12-15-43-17-Screen%20Shot%202021-11-12%20at%2015.43.09.png">
+Tốt nhất là bạn nên làm theo `quy tắc` thứ tự **chữ cái** và **số**
+:::
 
-<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/12-15-44-30-Screen%20Shot%202021-11-12%20at%2015.44.22.png">
+#### Cấu hình file `lab.conf`
 
-
-Và sẽ tự chế ra những mạng tượng ứng với các nhánh mạng `A`, `B`, `C`...
-
-| Nhánh | Mạng              | Router                             |
-| ----- | ----------------- | ---------------------------------- |
-| B     | 110.178.29.196/30 | router1 (`197`)<br>router2 (`198`) |
-| C     | 110.178.29.200/30 | router0 (`201`)<br>router1 (`202`) |
-| D     | 110.178.29.204/30 | router0 (`205`)<br>router3 (`206`) |
-| E     | 110.178.29.208/30 | router2 (`209`)<br>router3 (`210`) |
-
-
-| Nhánh | Mạng            | Router                           |
-| ----- | --------------- | -------------------------------- |
-| I     | 110.84.59.16/28 | router0 (`17`)<br>router6 (`18`) |
-| J     | 110.84.59.32/28 | router0 (`33`)<br>router4 (`34`) |
-| K     | 110.84.59.48/28 | router4 (`49`)<br>router5 (`50`) |
-| M     | 110.84.59.64/28 | router5 (`65`)<br>router6 (`66`) |
-
-
-
+Nhìn theo mô hình và ta cấu hình file `lab.conf` như sau:
 
 ```txt
 webserver[0]=A
@@ -101,6 +93,10 @@ router6[0]=H
 router6[1]=I
 router6[2]=M
 ```
+
+#### Cấu hình các thiết bị 
+
+Nhìn trên mô hình ta sẽ có các thiết bị như: `webserver`, `pc1`, `pc2`, `switch1`
 
 :::: tabs
 
@@ -142,6 +138,73 @@ router6[2]=M
   :::
 ::::
 
+::: warning ⚠️ LƯU Ý
+
+- `webserver` kết nối tới `eth0` của `router2`, ta cho `12.18.10.140` 
+  
+  thì ta bắt buộc phải cấu hình `eth0` của `router2` y vậy
+
+- `pc1` và `pc2` kết nối với `eth0` của `router6`, ta cho `192.168.10.1`
+  
+  thì ta bắt buộc phải cấu hình `eth0` của `router6` y vậy
+:::
+
+#### Cấu hình các `router`
+
+::: tip 💡 NHẬN XÉT
+
+- `router1`, `router2`, `router3` theo nhánh mạng `110.178.29.192/27` và sử dụng giải thuật `OSPF`
+
+- `router4`, `router5`, `router6` theo nhánh mạng `110.84.59.0/25` và sử dụng giải thuật `RIP`
+
+- `router0` theo cả 2 nhánh mạng trên và sử dụng đồng thời `OSPF` và `RIP`
+:::
+
+#### Chia nhánh mạng con
+
+Chúng ta phải thực hiện chia nháng mạng con, gồm 2 `nhánh` mỗi nhánh chia 4 mạng con 
+
+==> Chúng ta phải chia cho `8` nhánh vì `4`  nhánh nhưng chỉ sử dụng được `2` nhánh mạng con
+
+::: tip 💡 MẸO 
+
+Để mọi thứ được dễ dàng hơn, sử dụng công cụ [easy-subnet](https://github.com/BrunoBonacci/easy-subnet) để chia nhánh mạng con tự động
+:::
+
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/12-15-43-17-Screen%20Shot%202021-11-12%20at%2015.43.09.png">
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/12-15-44-30-Screen%20Shot%202021-11-12%20at%2015.44.22.png">
+
+::: warning ⚠️ LƯU Ý
+
+Như trên hình, chúng ta không sử dụng nhánh mạng `net1` vì nó trùng với mạng gốc và không sử dụng `net8` vì nó trùng với `boardcast` mạng gốc
+
+==> Chúng ta sử dụng từ `net2` → `net5`
+
+Và từ các nhánh mạng, hãy lập ra danh sách các `router` kết nối với nó và đặt `IP` theo tứ tự tăng dần
+:::
+
+| Nhánh | Mạng              | Router                             |
+| ----- | ----------------- | ---------------------------------- |
+| B     | 110.178.29.196/30 | router1 (`197`)<br>router2 (`198`) |
+| C     | 110.178.29.200/30 | router0 (`201`)<br>router1 (`202`) |
+| D     | 110.178.29.204/30 | router0 (`205`)<br>router3 (`206`) |
+| E     | 110.178.29.208/30 | router2 (`209`)<br>router3 (`210`) |
+
+| Nhánh | Mạng            | Router                           |
+| ----- | --------------- | -------------------------------- |
+| I     | 110.84.59.16/28 | router0 (`17`)<br>router6 (`18`) |
+| J     | 110.84.59.32/28 | router0 (`33`)<br>router4 (`34`) |
+| K     | 110.84.59.48/28 | router4 (`49`)<br>router5 (`50`) |
+| M     | 110.84.59.64/28 | router5 (`65`)<br>router6 (`66`) |
+
+::: tip 💡 MẸO
+
+Nếu mô hình theo thứ tự và có quy tắc, sẽ không cần phải nhìn mô hình mà nhìn thẳng bảng trên
+:::
+
+Từ bảng trên ta cấu hình các `router` như sau:
 
 :::: tabs 
 
@@ -206,11 +269,38 @@ router6[2]=M
   :::
 ::::
 
-Sử dụng giải thuật `OSPF` cho các nhánh mạng `B`, `C`, `D`, `E`
+> `/etc/init.d/quagga start` là để khởi động dịch vụ định tuyến nội miền tự động, thay cho lệnh `route add -net` (*đây là định tuyến thủ công*)
 
-> Cụ thể là `router0`, `router1`, `router2`, `router3`
+### Cấu hình dịch vụ `Quagga`
+
+::: tip 💡 NHẬN XÉT
+
+Ta phân ra `3` phần cấu hình như sau :
+
+- `router4`, `router5`, `router6` sử dụng giải thuật `RIP` (*nên làm trước*)
+
+- `router1`, `router2`, `router3` sử dụng giải thuật `OSPF` 
+
+- `router0` sử dụng cả 2 giải thuật trên
+:::
+
+#### Cẩu hình cho `router` sử dụng `RIP`
+
+> Cụ thể là `router4`, `router5`, `router6`
+
+Từ `router4` hãy tạo thư mục và các file như sau:
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/13-14-13-28-Screen%20Shot%202021-11-13%20at%2014.13.24.png"> 
 
 :::: tabs
+
+  ::: tab daemons
+  ```txt
+  zebra=yes
+  ripd=yes
+  ```
+  :::
+
   ::: tab zebra.conf
   ```txt
   hostname zebra
@@ -228,30 +318,171 @@ Sử dụng giải thuật `OSPF` cho các nhánh mạng `B`, `C`, `D`, `E`
   router rip
   network 110.84.59.0/25
   redistribute connected
-  redistribute ospf
   ```
   :::
 ::::
 
-daemons
+::: tip 💡 MẸO
 
-```txt
-zebra=yes
-ospfd=yes
-ripd=yes
+Hãy copy file từ `router4` qua `router5` và `router6` như sau:
+
 ```
-
-```txt
-hostname ospfd
-password zebra
-enable password zebra
-
-interface eth0
-interface eth1
-ospf cost 15
-
-router ospf
-network 110.178.29.192/27 area 0.0.0.0
-redistribute connected
-redistribute rip
+cp -r router4/etc router5
+cp -r router4/etc router6
 ```
+:::
+
+#### Cấu hình cho `router` sử dụng `OSPF`
+
+> Cụ thể là `router1`, `router2`, `router3`
+
+Từ `router1` hãy tạo thư mục và các file như sau:
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/13-14-18-59-Screen%20Shot%202021-11-13%20at%2014.18.55.png">
+
+:::: tabs
+
+  ::: tab daemons
+  ```txt
+  zebra=yes
+  ospfd=yes
+  ```
+  :::
+
+  ::: tab zebra.conf
+  ```txt
+  hostname zebra
+  password zebra
+  enable password zebra
+  ```
+  :::
+::::
+
+:::: tabs 
+
+  ::: tab ospfd.conf (router1)
+  ```txt
+  hostname ospfd
+  password zebra
+  enable password zebra
+
+  interface eth0
+  interface eth1
+  ospf cost 20
+
+  router ospf
+  network 110.178.29.192/27 area 0.0.0.0
+  redistribute connected
+  ```
+  :::
+
+  ::: tab ospfd.conf (router2)
+  ```txt
+  hostname ospfd
+  password zebra
+  enable password zebra
+
+  interface eth1
+  interface eth2
+  ospf cost 40
+
+  router ospf
+  network 110.178.29.192/27 area 0.0.0.0
+  redistribute connected
+  ```  
+  :::
+
+  ::: tab ospfd.conf (router3)
+  ```txt
+  hostname ospfd
+  password zebra
+  enable password zebra
+
+  interface eth0
+  interface eth1
+  ospf cost 60
+
+  router ospf
+  network 110.178.29.192/27 area 0.0.0.0
+  redistribute connected
+  ```
+  :::
+::::
+
+::: danger 🚨 CHÚ Ý
+
+Mỗi `router2` cấu hình `OSPF` sẽ mỗi khác
+
+Hãy để ý `interface` và `cost` của chúng
+:::
+
+> Bạn cũng có thể sử dụng lệnh `cp` như trên để làm nhanh quá trình
+
+#### Cấu hình cho `router0`
+
+Đây là `router` đặc biệt nên ta phải cấu hình như sau:
+
+:::: tabs
+
+  ::: tab daemons
+  ```txt
+  zebra=yes
+  ospfd=yes
+  ripd=yes
+  ```
+  :::
+
+  ::: tab zebra.conf
+  ```txt
+  hostname zebra
+  password zebra
+  enable password zebra
+  ```
+  :::
+
+  ::: tab ripd.conf
+  ```txt
+  hostname ripd
+  password zebra
+  enable password zebra
+
+  router rip
+  network 110.84.59.0/25
+  redistribute connected
+
+  redistribute ospf
+  ```
+  :::
+
+  ::: tab ospfd.conf
+  ```txt
+  hostname ospfd
+  password zebra
+  enable password zebra
+
+  interface eth0
+  interface eth1
+  ospf cost 15
+
+  router ospf
+  network 110.178.29.192/27 area 0.0.0.0
+  redistribute connected
+
+  redistribute rip
+  ```
+  :::
+::::
+
+::: danger 🚨 CHÚ Ý
+
+- Ở `daemons` ta khởi động cả 2 giải thuật `ripd` và `ospfd`
+
+- Ở `ripd.conf` ta thêm dòng `redistribute ospf` để phân phối cùng với giải thuật `OSPF`
+
+- Ở `ospfd.conf` ta thêm dòng `redistribute rip` để phân phối cùng với giải thuật `RIP` và cost là `15`
+:::
+
+
+### Khởi động hệ thống máy ảo
+
+Sử dụng lệnh `kathara lstart` để khởi động hệ thống máy ảo
