--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/7.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/7.md
@@ -411,7 +411,7 @@ Từ `router1` hãy tạo thư mục và các file như sau:
 
 ::: danger 🚨 CHÚ Ý
 
-Mỗi `router2` cấu hình `OSPF` sẽ mỗi khác
+Mỗi `router` cấu hình `OSPF` sẽ mỗi khác
 
 Hãy để ý `interface` và `cost` của chúng
 :::
@@ -486,3 +486,62 @@ Hãy để ý `interface` và `cost` của chúng
 ### Khởi động hệ thống máy ảo
 
 Sử dụng lệnh `kathara lstart` để khởi động hệ thống máy ảo
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/13-14-55-29-Screen%20Shot%202021-11-13%20at%2014.55.21.png">
+
+::: tip 💡 MẸO
+
+- Hãy xem trên mỗi thiết bị có cái nào báo lỗi cấu hình network sai => nếu có ta hãy sửa nó
+
+- Hãy kiểm tra dịch vụ `quagga` trên các `router` bằng lệnh sau:
+
+  ```sh
+  /etc/init.d/quagga status
+
+==> Khi đã sửa các sai sót hãy gõ lệnh `kathara lrestart` để khởi động lại hệ thống máy ảo
+:::
+
+#### Kiểm tra liên thông của các thiệt bị
+
+Ta không cần thiết phải kiểm tra hết thiết bị, hãy lấy ngẫu nhiên 2 cái bạn thích
+
+> Mình sẽ lấy `router1` và `router4`
+
+Từ 2 thiết bị này hãy gõ lệnh `route` như sau và quan sát bảng vạch đường
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/13-15-05-05-Screen%20Shot%202021-11-13%20at%2015.04.09.png">
+
+::: tip 💡 NHẬN XÉT
+
+- Khung màu `cam` cho thấy có thể `ping` tới `webserver`
+
+- Khung màu `đỏ` cho thấy có thể `ping` tới `router0`, `router4`, `router5`, `router6`
+
+- Khung màu `xanh` cho thấy có thể `ping` tới `router0`, `router1`, `router2`, `router3`
+
+- Khung màu `tím` cho thấy có thể `ping` tới `pc1`, `pc2`, `switch1`
+
+==> Ta không cần phải kiểm tra lệnh `ping` nếu bảng vạch đường, nhưng bạn hoàn toàn có thể để chắc chắn
+:::
+
+### Khởi động dịch vụ `webserver`
+
+Từ `webserver` hãy gõ lệnh sau để khởi động dịch vụ `apache2`
+
+```sh
+/etc/init.d/apache2 start
+```
+
+Sau đó từ `pc1` và `pc2` gõ lệnh `links` và kết nối đến `12.18.10.139` (*ip của `webserver`*)
+
+> Gõ `F10` để ra `Menubar`
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/13-15-12-49-Screen%20Shot%202021-11-13%20at%2015.12.35.png">
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/13-15-12-52-Screen%20Shot%202021-11-13%20at%2015.12.44.png">
+
+### Hủy hệ thống máy ảo
+
+Sử dụng lệnh `kathara lclean` để hủy hệ thống máy ảo
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/13-15-13-46-Screen%20Shot%202021-11-13%20at%2015.13.38.png">
